--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,22 +1,28 @@
 name: Publish Docker
 
-on: [push]
+on:
+  push:
+    branches: [main]
+
+permissions:
+  packages: write
+  contents: read
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v4
 
-    - name: Convert repository name to lower case
-      run: echo IMAGE_REPOSITORY="$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_ENV"
-
-    - name: Publish to Registry
-      uses: docker/build-push-action@v1
+    - name: Login to GHCR
+      uses: docker/login-action@v3
       with:
-        repository: ${{ env.IMAGE_REPOSITORY }}/arma-bench
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-        registry: docker.pkg.github.com
-        tag_with_ref: true
-        push: true
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build Image
+      run: docker build . -t ghcr.io/${{ github.repository }}:latest
+
+    - name: Push Image
+      run: docker push ghcr.io/${{ github.repository }}:latest
