--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,17 @@ members = [
     "extension",
 ]
 
+[workspace.lints.clippy]
+all = { level = "deny", priority = -1 }
+nursery = { level = "deny", priority = -1 }
+pedantic = { level = "warn", priority = -1 }
+unwrap_used = "deny"
+cognitive_complexity = "allow"
+
+[workspace.lints.rust]
+future_incompatible = "warn"
+nonstandard_style = "warn"
+
 [workspace.dependencies]
 arma-rs = "1.10.5"
 rmp-serde = "1.3.0"
