--- a/extension/Cargo.toml
+++ b/extension/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "arma-bench-extension"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
+
+[lints]
+workspace = true
 
 [dependencies]
 arma-bench = { path = "../client" }
