--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "arma-bench-server"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
+
+[lints]
+workspace = true
 
 [dependencies]
 arma-bench = { path = "../client", features = ["tokio"] }
