--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ future_incompatible = "warn"
 nonstandard_style = "warn"
 
 [workspace.dependencies]
-arma-rs = "=1.11.4"
+arma-rs = "1.11.5"
 rmp-serde = "1.3.0"
 serde = "1.0.210"
 serde_json = "1.0.128"
